In the progress of fixing alignment issues on the top bar of the builder-- a fix was made, though it broke text changing, so that has to be fixed.

--- a/src/main/resources/view/builder/builderDefaultStyle.css
+++ b/src/main/resources/view/builder/builderDefaultStyle.css
@@ -30,6 +30,7 @@
 
 .text{
     -fx-border-width: 0.2;
+    -fx-alignment: center-left;
 }
 
 /*------------------------------------------------------------------------------------------------*/
